Latest:
------
 ChangeLog last updated: r1801 2005-05-23
 Cumulative changes since last tarball.
 For even more detail, use "svn log" and "svn diff".

0.7.11 (api:77/proto:74)
-----
 * The upper limit of the runtime tuning parameter max_buffers 
   was ways too low for today's IBM storage controllers. 
   Was 32 - 10000 ; Now it is 32 - 131072 ( Now one could 
   allow DRBD to allocate up to half a gigabyte of memory as 
   receive buffers)
 * A fix to the Makefiles to make building of RPMs work on RAHS4.
 * A workaround to have DBRD running on PPC64 with Linux-2.4.x kernels,
   on Linux-2.6.x everything was fine already.
 * Removal of dead code (busy_blocks).
 * LINBIT drbd rpms now conflict with km_drbd
   (SuSE's kernel module source hook)
 * possibly existing /lib/modules/*/extra/drbd.ko are renamed to .orig in the
   post-install scripts to avoid conflicts with existing modules from
   distribution kernel packages

0.7.10 (api:77/proto:74)
-----
 * 0.7.9 had a memory corruption bug and memory leakage (BIOs).
   This time I did the clone_bio() fix myself, and this release is
   supposed to work with SLES9 SP1, Linux-2.6.11 and Linux-2.6.12.

0.7.9 (api:77/proto:74)
-----
 * A fix that makes DRBD work on SLES9 SP1 kernel, and 
   probabely will be also necessary for Linux-2.6.11

0.7.8 (api:77/proto:74)
-----
 * Fixed a bug that caused the syncer to starve on devices 
   bigger than 2 TB on 32bit systems (=CONFIG_LBA).
 * Made online resizing actually work. Now it makes a lot
   more sense to put DRBD on top of LVM.
 * Made the user dialog to work on RedHat based distributions.
 * A small optimization that improves the performance of the 
   syncer when woking with IBM's ServRaid Controllers (ips).
   May have a positive effect with other Controllers as well.
 * Made epoch_size atomic. This removes a SMP race condition that
   could lead on some Xeon CPUs to an ASSERT printk, but did no other
   harm than printing messages to the syslog